# pandas-select

./: .commitlintrc.yml  .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  LICENSE  README.md  README.rst  mypy.ini  pyproject.toml  readthedocs.yaml  setup.cfg
.github/workflows/: ci-tests.yml  tests.yml
docs/: api.rst  conf.py  examples.rst  getting_started.rst  index.rst  license.rst  why.rst
docs/_templates/autosummary/: class.rst
docs/reference/: boolean_indexing.rst  index.rst  label_selection.rst  pandera.rst  sklearn.rst
docs/reference/api/: pandas_select.bool.Anywhere.__call__.rst  pandas_select.bool.Anywhere.intersection.rst  pandas_select.bool.Anywhere.rst  pandas_select.bool.Anywhere.symmetric_difference.rst  pandas_select.bool.Anywhere.union.rst  pandas_select.column.AllBool.__call__.rst  pandas_select.column.AllBool.difference.rst  pandas_select.column.AllBool.intersection.rst  pandas_select.column.AllBool.rst  pandas_select.column.AllBool.symmetric_difference.rst  pandas_select.column.AllBool.union.rst  pandas_select.column.AllCat.__call__.rst  pandas_select.column.AllCat.difference.rst  pandas_select.column.AllCat.intersection.rst  pandas_select.column.AllCat.rst  pandas_select.column.AllCat.symmetric_difference.rst  pandas_select.column.AllCat.union.rst  pandas_select.column.AllNominal.__call__.rst  pandas_select.column.AllNominal.difference.rst  pandas_select.column.AllNominal.intersection.rst  pandas_select.column.AllNominal.rst  pandas_select.column.AllNominal.symmetric_difference.rst  pandas_select.column.AllNominal.union.rst  pandas_select.column.AllNumeric.__call__.rst  pandas_select.column.AllNumeric.difference.rst  pandas_select.column.AllNumeric.intersection.rst  pandas_select.column.AllNumeric.rst  pandas_select.column.AllNumeric.symmetric_difference.rst  pandas_select.column.AllNumeric.union.rst  pandas_select.column.AllStr.__call__.rst  pandas_select.column.AllStr.difference.rst  pandas_select.column.AllStr.intersection.rst  pandas_select.column.AllStr.rst  pandas_select.column.AllStr.symmetric_difference.rst  pandas_select.column.AllStr.union.rst  pandas_select.column.HasDtype.__call__.rst  pandas_select.column.HasDtype.difference.rst  pandas_select.column.HasDtype.intersection.rst  pandas_select.column.HasDtype.rst  pandas_select.column.HasDtype.symmetric_difference.rst  (+68 more)
pandas_select/: __init__.py  __version__.py  _base.py  _utils.py  base.py  bool.py  column.py  index.py  iterutils.py  label.py  pandera.py  sklearn.py  utils.py  where.py
tests/: conftest.py  test_base.py  test_bool.py  test_column.py  test_column_selectors.py  test_index.py  test_index_operators.py  test_index_selectors.py  test_label.py  test_pandera.py  test_sklearn.py  test_where.py  utils.py
